@@ -3,6 +3,13 @@ UNRELEASED, S3QL tip
   * Fixed a crash when using Google OAuth2 and the first request after
     the access token has expired is a write request.
 
+  * mount.s3ql now supports systemd-style readyness notification. To
+    use this feature, make sure that you have the 'systemd' module
+    installed for Python 3.
+
+    This feature has not been tested, if you use it or encounter
+    problems, please report back.
+
 2014-07-28, S3QL 2.10.1
 
   * 'setup.py install' now also installs the s3ql_verify command.
